STELLA, CHANGES


#### 0.5.5 (2009-01-14) ###############################

http://github.com/solutious/stella/tree/0.5.5

* Now has specs (33 specifications, 303 requirements)
* New dependency: test-spec (development copy only)
* Added delano/drydock to vendor (was delano/frylock). 
* Improved argument handling for load tool adapters (httperf not complete)
* Re-built Stella::Storable and subclasses (now using "field" method)
* Test::Stats, Test::Run::Summary cleanup
* Fixed RubyGems require error
* Fixed stddev bug by removing weak math, adding stats class from Mongrel


#### 0.5.4-alpha (2009-01-07) #########################

http://github.com/solutious/stella/tree/0.5.4-alpha

* New command: watch. Monitor HTTP traffic with Ruby-Pcap (unix only) or proxy. Pcap also supports DNS sniffing.
* Improved error handling for stats output
* Now runs on Ruby 1.9.1, JRuby
* Added Windows support for most features
* Added patch for Ruby-Pcap
* Added friendly error handling for Apache Bench, Siege, and Httperf


#### 0.5.3-preview (2008-12-23) #######################

http://github.com/solutious/stella/tree/e4d2bd8db3d1323fbc3b8bbb7f703ce7b8c88551

* Initial public release
